# C-CPP-Monorepo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.MD  README.md  clang_compile.cmake
cleanup_stack/: CMakeLists.txt  README.md  cleanupstack.c  cleanupstack.h  main.c
game_of_life/: CMakeLists.txt  README.md  main.cpp
glowing_dots/: CMakeLists.txt  README.md  main.cpp
tictactoe/: CMakeLists.txt  README.md  main.cpp  ops.cpp  ops.hpp
vk_test/: Forward.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Program.cpp  Program.hpp  README.md  SDLUtils.cpp  SDLUtils.hpp  Surface.hpp  SwapchainManager.cpp  SwapchainManager.hpp  Types.hpp  Window.hpp  main.cpp  util.hpp
vk_test_v1/: main.cpp
vk_test_v2/: CMakeLists.txt  Engine.cpp  Engine.hpp  SDLUtils.cpp  SDLUtils.hpp  VulkanUtils.cpp  VulkanUtils.hpp  main.cpp  vk_engine.cpp  vk_engine.hpp  vk_images.cpp  vk_images.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_util.hpp
vk_test_v3/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.hpp  SDLUtils.cpp  SDLUtils.hpp  Surface.hpp  SwapchainManager.cpp  SwapchainManager.hpp  SwapchainManager2.cpp  SwapchainManager2.hpp  Window.hpp  main.cpp  util.cpp  util.hpp
vk_test_v4/: CMakeLists.txt  Debug.cpp  Debug.hpp  Device.cpp  Device.hpp  Forward.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  README.MD  SDLUtils.cpp  SDLUtils.hpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  main.cpp  util.hpp
